# algorithmeai-snake

./: .gitignore  CLAUDE.md  LICENSE  README.md  TITANIC.md  benchmark_mi.py  benchmark_profiles.py  benchmark_v521.py  benchmarks.py  claude-snake-submission.csv  oppose_types.snake  pyproject.toml  run_vip.py  setup.py  snake-claude-titanic.py  test_perfect_fit.py  titanic_dual_prob.py
algorithmeai/: __init__.py  _accel.pyx  cli.py  meta.py  snake.py
profiles/: adult.snake  adult_income.snake  breast_cancer.snake  digits.snake  hef.snake  mushroom.snake  newsgroups.snake  pima.snake  spaceship.snake  spaceship_titanic.snake  wine_quality.snake
tests/: test_audit.py  test_buckets.py  test_candle.py  test_cli.py  test_core_algorithm.py  test_edge_cases.py  test_feature_mi.py  test_logging.py  test_meta.py  test_oppose_profiles.py  test_parallel_batch.py  test_snake.py  test_stress.py  test_synthetic.py  test_ultimate_stress.py  test_validation.py
tests/fixtures/: sample.csv
titanic_submissions/: 01_baseline_t056.csv  02_baseline_t060.csv  03_conservative.csv  04_moderate.csv  05_aggressive.csv  06_L100_b250.csv  07_L12_b400.csv  08_L100_b250_FN.csv  09_L12_b400_FN.csv
