[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "algorithmeai"
version = "4.2.0"
description = "Snake - SAT-ensembled bucketed multiclass classifier"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [
    { name = "Charles Dana" },
    { name = "Monce SAS" }
]
dependencies = []

[project.scripts]
snake = "algorithmeai.cli:main"

[project.urls]
Homepage = "https://github.com/Monce-AI/algorithmeai-snake"
Repository = "https://github.com/Monce-AI/algorithmeai-snake"
Documentation = "https://github.com/Monce-AI/algorithmeai-snake#readme"

[tool.hatch.build.targets.wheel]
packages = ["algorithmeai"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
